Fix port forwarding checkbox alignment for large font sizes
If users set a large font, the checkbox would no longer be aligned.
Therefore, we need to force the alignment of the checkbox with the text,
to make sure it works for all font sizes.

R=yangguo@chromium.org

Fixed: 1168996
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2643725
Auto-Submit: Tim van der Lippe <tvanderlippe@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#846147}

--- a/chrome/browser/resources/inspect/inspect.css
+++ b/chrome/browser/resources/inspect/inspect.css
@@ -335,6 +335,7 @@ dialog.config {
 }
 
 .port-forwarding-container {
+  align-items: center;
   display: flex;
 }
 
